--- a/css/style-redirect.css
+++ b/css/style-redirect.css
@@ -27,7 +27,8 @@
       }
       .logo {
         margin-bottom: -8px;
-        width: 200px;
+        width: 100px;
+        height: 37.39px;
       }
       .box {
         text-align: center;
